--- a/force-app/main/default/lwc/smsSweeperForceMenuBar/smsSweeperForceMenuBar.css
+++ b/force-app/main/default/lwc/smsSweeperForceMenuBar/smsSweeperForceMenuBar.css
@@ -9,6 +9,9 @@
     display: flex;
     font-family: 'silkscreennormal', 'monospace';
     justify-content: space-between;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 .sms-counter-container {
